tests/ui/async-await/recursive-async-impl-trait-type.no_drop_tracking.stderr
error[E0733]: recursion in an `async fn` requires boxing
  --> $DIR/recursive-async-impl-trait-type.rs:8:40
   |
LL | async fn recursive_async_function() -> () {
   |                                        ^^ recursive `async fn`
   |
   = note: a recursive `async fn` must be rewritten to return a boxed `dyn Future`
   = note: consider using the `async_recursion` crate: https://crates.io/crates/async_recursion

error: aborting due to previous error

For more information about this error, try `rustc --explain E0733`.
