tests/ui/async-await/recursive-async-impl-trait-type.rs
// revisions: no_drop_tracking drop_tracking drop_tracking_mir
// [drop_tracking] compile-flags: -Zdrop-tracking
// [drop_tracking_mir] compile-flags: -Zdrop-tracking-mir
// edition:2018
// Test that impl trait does not allow creating recursive types that are
// otherwise forbidden when using `async` and `await`.

async fn recursive_async_function() -> () {
    //~^ ERROR recursion in an `async fn` requires boxing
    recursive_async_function().await;
}

fn main() {}
